<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.Yogify.birthdayreminder.ui.MainActivity">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_animation"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/giftsFragment"
        android:icon="@drawable/ic_gift_animation"
        android:title="@string/gifts"
        app:showAsAction="always" />
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_store_animation"
        android:title="@string/store"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_animation"
        android:title="@string/profile"
        app:showAsAction="always" />

</menu>