<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/view_grid"
        android:title="@string/voice_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_voice_search"
        android:icon="@drawable/ic_voice_search_animation"
        android:title="@string/voice_search"
        app:showAsAction="always" />

    <item
        android:visible="false"
        android:icon="@drawable/ic_notification"
        android:id="@+id/menu_notification"
        android:title="@string/notification"
        app:showAsAction="always" />
<!--     android:actionLayout="@layout/layout_notification_indicator"-->


    <item
        android:id="@+id/menu_profile"
        android:alphabeticModifiers="SHIFT"
        android:icon="@drawable/ic_profile_demo"
        android:title="@string/profile"
        app:showAsAction="always" />


</menu>