<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddReminderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            app:menu="@menu/menu_add_reminder"
            app:navigationIcon="@drawable/ic_back_arrow" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/birthdaypage_scrollbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:background="@color/mmd_theme_on_backgroud"
        android:scrollIndicators="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_5dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/add_img_size"
                android:layout_height="@dimen/add_img_size"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:padding="@dimen/margin_5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_demo"
                app:shapeAppearanceOverlay="@style/Round_Image"
                app:strokeColor="@color/colortheme1_1"
                app:strokeWidth="@dimen/card_stroke_radious" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/add_reminder_name"
                    style="@style/EditText_Style_Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_5dp">

                <RadioGroup
                    android:id="@+id/add_reminder_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/gender_male"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/gender_male"
                        style="@style/RadioButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/gender_female"
                        style="@style/RadioButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5dp"
                        android:layout_marginRight="@dimen/margin_5dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/female" />

                </RadioGroup>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_reminder_dob"
                    style="@style/EditText_Style_Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_calender"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:drawableTint="?colorPrimary"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_of_birth" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_reminder_time"
                    style="@style/EditText_Style_Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_time"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:drawableTint="?colorPrimary"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/time_of_birth"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/add_reminder_contact"
                    style="@style/EditText_Style_Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_contact"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:drawableTint="?colorPrimary"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/mobilenumber" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/add_reminder_wish"
                    style="@style/EditText_Style_Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:hint="@string/BestWisheMessage"
                    android:lines="5" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/product_switchbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance_subheading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/margin_10dp"
                    android:text="@string/reminder_type" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/add_reminder_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_5dp"
                    android:layout_margin="@dimen/margin_5dp"
                    app:checkedChip="@id/add_reminder_birthday"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_reminder_birthday"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_birthday" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_reminder_anniversary"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_anniversary" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_reminder_other"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_other" />


                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance_subheading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/margin_10dp"
                    android:text="@string/notification_type" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/add_reminder_notification_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_10dp"
                    app:checkedChip="@id/add_reminder_all"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_reminder_all"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_type" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_reminder_sameday"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/same_day" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_reminder_sevenday"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/before_seven_day" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_reminder_onemonth"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/before_one_month" />


                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bnt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_20dp"
        android:src="@drawable/ic_right" />


</RelativeLayout>