<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/more_bottomsheet"
    style="@style/BottomSheetDialogtheme"
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:background="@drawable/background_bottomsheetr"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_name"
            style="@style/TextAppearance_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/text_hint"
            android:textColor="?colorOnPrimary" />


        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_stroke_radious"
            android:layout_below="@id/txt_name"
            android:layout_marginTop="10dp"
            android:background="?colorOnPrimary"></View>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_divider"
            android:background="?colorSurface">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_option"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/menu_option_delete"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".1"
                            android:src="@drawable/ic_delete"></ImageView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance_Switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_name"
                            android:layout_weight=".8"
                            android:text="@string/delete" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_option_edit"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".1"
                            android:src="@drawable/ic_edit"></ImageView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance_Switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_name"
                            android:layout_weight=".8"
                            android:text="@string/edit" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_option_qr"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".1"
                            android:src="@drawable/ic_qr"></ImageView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance_Switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_name"
                            android:layout_weight=".8"
                            android:text="@string/showqrcode" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_option_share_whatsapp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".1"
                            android:src="@drawable/ic_whatsapp"></ImageView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance_Switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_name"
                            android:layout_weight=".8"
                            android:text="@string/sharewhatsapp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_option_share"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"                        android:orientation="horizontal"
                        android:padding="@dimen/margin_10dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".1"
                            android:src="@drawable/ic_share"></ImageView>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance_Switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_name"
                            android:layout_weight=".8"
                            android:text="@string/share" />

                    </LinearLayout>


                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_qr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/qr_cancle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/margin_10dp"
                        android:src="@drawable/ic_cancel" />

                    <ImageView
                        android:id="@+id/qr_image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/margin_10dp" />

                </RelativeLayout>

            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/add_img_size"
        android:layout_height="@dimen/add_img_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:padding="@dimen/margin_5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_demo"
        app:shapeAppearanceOverlay="@style/Round_Image"
        app:strokeColor="?colorOnPrimary"
        app:strokeWidth="@dimen/card_stroke_radious" />


</RelativeLayout>